--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@
     </main>
     <footer>
         <footer class="footer footer-center p-10 bg-[#121212] text-white text-base-content rounded">
+            <div>
+                <img class="flex justify-start w-10" src="./images/logo.png" alt="">
+                <p class="text-white text-xl font-bold">Fruit Brust</p>
+            </div>
             <nav class="grid grid-flow-col gap-4">
               <a class="link link-hover">Home</a>
               <a class="link link-hover">About us</a>
@@ -393,9 +397,6 @@
                 <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
               </div>
             </nav> 
-            <aside>
-              <p>Copyright © 2024 - All right reserved by Fruit Brust</p>
-            </aside>
           </footer>
     </footer>
 </body>
